--- a/solns/southtirol.tex
+++ b/solns/southtirol.tex
@@ -164,19 +164,48 @@ At this point we are done!  The last expression is not known yet,\footnote{The i
 %>> quad(@(u) u.*(1 - u.^(4/3)).^(3/7),0,1)
 %ans =  0.31422
 
-\prob{12}  Based on introducing errors big and small in \texttt{siaflat.m} I believe this claim.
+\prob{12}  Based on introducing errors big and small in \texttt{siaflat.m}, I believe this claim.
 
-\prob{13}  The plot of the numerical thickness error shows that all of the error is concentrated near the ice sheet margin.  This is because the margin is steep, that is, the gradient of thickness and surface elevation has unbounded magnitude at the margin.  In fact, merely interpolating the exact margin shape onto the grid introduces errors of the same magnitude as the numerical solution error, a claim easily tested using the Halfar solution; see [10] = Bueler et al.~(2005).  Furthermore, \emph{any} ice flow model (e.g.~SIA to Stokes) will produce an ice sheet shape with a steep margin.  Thus this character of the thickness error is universal and unavoidable.\footnote{Assuming the numerical method does not know the asymptotic shape of the margin, which is non-polynomial and not smooth.  Thus any finite difference, finite element, finite volume, spectral, or hp-finite element model will produce thickness error of the same character and magnitude as the boring finite difference method shown here.}
+\prob{13}  The numerical thickness error plot shows that all of the error is concentrated near the ice sheet margin.  This is because the margin is steep, that is, the gradient of thickness and surface elevation has unbounded magnitude at the margin.  In fact, merely interpolating the exact margin shape onto the grid introduces errors of the same magnitude as the numerical solution error, a claim easily tested using the Halfar solution; see [10] = Bueler et al.~(2005).  Furthermore, \emph{any} ice flow model (e.g.~SIA to Stokes) will produce an ice sheet shape with a steep margin, because the physics leads to such shapes.  Thus this character of the numerical thickness error is universal across models, and unavoidable.\footnote{Assuming the numerical method does not know the asymptotic shape of the margin, which is non-polynomial and not smooth.  Thus any finite difference, finite element, finite volume, spectral, or hp-finite element model will produce thickness error of the same character and magnitude as the boring finite difference method shown here.}
 
-\prob{14}  
+\prob{14}  Let's start with the mass continuity equation (25), write the vertically-averaged velocity as an integral, and then use Leibniz's rule:
+\begin{align*}
+H_t &= M - \Div \left(\bar{\mathbf{U}} H \right) \\
+    &= M - \Div \left(\int_b^h \mathbf{U}(t,x,y,z)\,dz\right) \\
+    &= M - \grad h\cdot \mathbf{U}(t,x,y,h) + \grad b\cdot \mathbf{U}(t,x,y,b) - \int_b^h \Div \mathbf{U}(t,x,y,z)\,dz.
+\end{align*}
+But $M=a-s$ and $H=h-b$.  Also $\Div \mathbf{U} = u_x + v_y = - w_z$ by incompressibility (1).  Thus, changing notation for evaluation at the surface and base and integrating the $z$ derivative,
+\begin{align*}
+h_t - b_t &= a - s - \grad h\cdot \mathbf{U}\big|_h + \grad b\cdot \mathbf{U}\big|_b + \int_b^h w_z\,dz \\
+    &= a - s - \grad h\cdot \mathbf{U}\big|_h + \grad b\cdot \mathbf{U}\big|_b + w\big|_h - w\big|_b.
+\end{align*}
+We have used the mass continuity equation (25) and incompressibility (1).  Now use the base kinematical equation (41) to simplify the right side:
+  $$h_t - b_t = a - \grad h\cdot \mathbf{U}\big|_h + w\big|_h - b_t.$$
+Dropping $-b_t$ from both sides we get the surface kinematical equation (40), as desired.
 
-\prob{15}  
+\prob{15}  FIXME
 
-\prob{16}  
+\prob{16}  FIXME
 
-\prob{17}  
+\prob{17}  From (5), by taking norms (second invariants) we have a scalar equation
+    $$2 |Du|^2 = Du_{ij} Du_{ij} = (A \tau^2 \tau_{ij})\,(A \tau^2 \tau_{ij}) = A^2 \tau^4 \tau_{ij} \tau_{ij} = 2 A^2 \tau^6$$
+so $|Du|=A\tau^3$, as claimed.  Solving for $\tau$ gives $\tau = A^{-1/3} |Du|^{1/3}$.  Again using (5) we get
+    $$Du_{ij} = A \left(A^{-1/3} |Du|^{1/3}\right)^2 \tau_{ij} = A^{1/3} |Du|^{2/3} \tau_{ij}.$$
+Solving for $\tau_{ij}$ gives the viscosity form
+    $$\tau_{ij} = A^{-1/3} |Du|^{-2/3} Du_{ij}.$$
+Comparing to ``$\tau_{ij} = 2 \nu\, Du_{ij}$'' gives the formula for $\nu$ stated just after (17).
 
-\prob{18}  
+\prob{18}  As noted, equation (18) follows from dropping $\tau_{13,x}$ from equation (8), giving $(p+\tau_{11})_z = -\rho g$.  Integrating this we get
+    $$p+\tau_{11} = -\rho g z + C_0.$$
+We take the normal stress to have zero at the surface: $\sigma_{33} = 0$.  Equivalently $p+\tau_{11}=0$ at the surface because $p+\tau_{11} = p-\tau_{33} = -\sigma_{33}$.  Then $0=-\rho g h + C_0$ so finally $p + \tau_{11} = \rho g (h-z)$, which is equation (19).  Taking the $x$ derivative gives an expression for $p_x$, namely: $p_x = -\tau_{11,x} + \rho g h_x$.  Substituting this into (7) gives
+    $$-\tau_{11,x} + \rho g h_x = \tau_{11,x} + \tau_{13,z}$$
+or
+    $$2 \tau_{11,x} + \tau_{13,z} = \rho g h_x.$$
+Now we use viscosity form (17) to get
+    $$2 \left(2 \nu Du_{11}\right)_x + \left(2 \nu Du_{13}\right)_z = \rho g h_x.$$
+Recalling the formula for the strain rate tensor stated after (5), we have
+    $$\left(4 \nu u_x\right)_x + \left(\nu (u_z + w_x)\right)_z = \rho g h_x.$$
+Which is the hydrostatic stress balance equation (20).
 
 \end{document}
 
