--- a/solns/southtirol.tex
+++ b/solns/southtirol.tex
@@ -184,17 +184,27 @@ by substitution $u=x/\sqrt{4D}$.  Thus $A = (4\pi D)^{-1/2}$ and $T(t,x) = (4\pi
 
 \prob{9}  This is an unsolved problem.
 
-\prob{10}  \emph{Though this problem only requires the ability to differentiate, it may be the hardest one in this exercise set!}
+\prob{10}  \emph{Though this problem only requires the ability to differentiate, it may be the hardest one in this exercise set!}  For polar coordinates, recall that if $f=f(r)$ then $\grad f = f_r \hat{\mathbf{r}}$, and if $\mathbf{X}=\alpha \hat{\mathbf{r}}$ then $\Div \mathbf{X} = \frac{1}{r} \left(r \alpha\right)_r$.
 
-For polar coordinates, note that if $f=f(r)$ then $\grad f = f_r \hat{\mathbf{r}}$.  Also, if $\mathbf{X}=\alpha \hat{\mathbf{r}}$ then $\Div \mathbf{X} = \frac{1}{r} \left(r \alpha\right)_r$.
-
-Next define new variables $\tau = t/t_0$ and $\rho = r/R_0$ so
+It helps to clean up the formula before differentiating.  Define new variables $\tau = t/t_0$ and $\rho = r/R_0$ so
     $$H = H_0 \frac{1}{\tau^{1/9}} \left[1 - \left( \frac{\rho}{\tau^{1/18}} \right)^{4/3}\right]^{3/7}.$$
-Then, noting $H_r < 0$ for our solution, equation (26) is equivalent to
+Then equation (26) in the $n=3$ case is equivalent to
     $$\frac{1}{t_0} H_\tau = \frac{\Gamma}{R_0^4} \frac{1}{\rho} \left(\rho H^5 H_\rho^3\right)_\rho.$$
 By the formula for $t_0$ just after equation (39), this is equivalent to
     $$18 H_0^7 \left(\frac{4}{7}\right)^3 H_\tau \stackrel{\ast}{=} \frac{1}{\rho} \left(\rho H^5 H_\rho^3\right)_\rho.$$
 We will compute the sides of $\ast$ and show they are the same.
+
+First,
+    $$H_\tau = H_0 \left(-\frac{1}{9}\right) \tau^{-10/9} \left[1 - \left( \frac{\rho}{\tau^{1/18}} \right)^{4/3}\right]^{3/7} + H_0 \tau^{-32/27} \left(\frac{2}{63}\right) \rho^{4/3}  \left[1 - \left( \frac{\rho}{\tau^{1/18}} \right)^{4/3}\right]^{-4/7}.$$
+On the other hand,
+    $$H_\rho = - H_0 \left(\frac{4}{7}\right) \tau^{-5/27} \rho^{1/3} \left[1 - \left( \frac{\rho}{\tau^{1/18}} \right)^{4/3}\right]^{-4/7}$$
+so
+    $$\rho H^5 H_\rho^3 = -\rho^2 H_0^8 \left(\frac{4}{7}\right)^3 \tau^{-30/27} \left[1 - \left( \frac{\rho}{\tau^{1/18}} \right)^{4/3}\right]^{3/7}$$
+and
+\begin{align*}
+\left(\rho H^5 H_\rho^3\right)_\rho &= - H_0^8 \left(\frac{4}{7}\right)^3 \tau^{-30/27} \left\{2 \rho \left[1 - \left( \frac{\rho}{\tau^{1/18}} \right)^{4/3}\right]^{3/7} + \rho^2 \left(\frac{3}{7}\right) \left[1 - \left( \frac{\rho}{\tau^{1/18}} \right)^{4/3}\right]^{-4/7}  \left(\frac{-4}{3}\right) \frac{\rho^{1/3}}{\tau^{2/27}}\right\}
+\end{align*}
+and
 
 FIXME
 
