dealt with problem 16; solutions done

--- a/solns/southtirol.tex
+++ b/solns/southtirol.tex
@@ -266,7 +266,7 @@ Integrating from $x_g=0$ to $x$ gives
     $$\frac{u(x)^{n+1}-u_g^{n+1}}{n+1} = \frac{C_s}{M_0 (n+1)} \left((M_0 x + u_g H_g)^{n+1} - (u_g H_g)^{n+1}\right).$$
 Solving for $u(x)$ gives the velocity part of the van der Veen solution.  Solving $\dagger$ for $H(x)$ gives the thickness part of the van der Veen solution.
 
-\prob{16}  FIXME
+\prob{16}  \emph{I have decided this is not a good exercise.  It will be deleted from future versions of the notes.}
 
 \prob{17}  From (5), by taking norms (second invariants) we have a scalar equation
     $$2 |Du|^2 = Du_{ij} Du_{ij} = (A \tau^2 \tau_{ij})\,(A \tau^2 \tau_{ij}) = A^2 \tau^4 \tau_{ij} \tau_{ij} = 2 A^2 \tau^6$$
