update some solutions

--- a/solns/southtirol/rootglacier.tex
+++ b/solns/southtirol/rootglacier.tex
@@ -44,7 +44,7 @@
 
 \begin{document}
 \scriptsize
-\noindent September 2014 \hfill Ed Bueler
+\noindent June 2016 \hfill Ed Bueler
 
 \vspace{10mm}
 
@@ -52,7 +52,7 @@
 
 \medskip
 \small
-\centerline{\emph{These are reasonably complete solutions to some notes available at a small town in the Schnalstal valley.}}
+\centerline{\emph{These are reasonably-complete solutions to some notes available at a small town near the Root Glacier.}}
 \normalsize
 
 \bigskip\bigskip
